--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Noto+Sans+Mono:wght@600&display=swap');
+
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -35,4 +38,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* .Navbar{
+  position:fixed;
+  width: 100%;
+  height: 56px;
+  left: 0px;
+  top: 0px;
+}
+.containerItemList{
+  position: absolute;
+  top: 56px;
+  left: 0px;
+  margin-left:9vw;
+  margin-top: 24px;
+} */
+body{
+  background-color: rgba(67, 67, 73, 1);
+}
+.webContainer{
+  margin-left: 17vh;
 }
