--- a/src/Atoms/Navlist/Navlist.css
+++ b/src/Atoms/Navlist/Navlist.css
@@ -10,10 +10,30 @@
 
     color: #FFFFFF;
     list-style:none;
+    text-decoration: none;
     margin-right: 15px;
     transition: all 0.15s ease-in-out;
     transition-property: color, background-color;
+
 }
 .navlist:hover {
     color: rgb(177, 177, 30);
+}
+
+.navlistActive{
+    font: bold 0.8rem sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 14px;
+    line-height: 14px;
+    /* identical to box height */
+
+    letter-spacing: -0.409091px;
+
+    color: rgb(177, 177, 30);
+    list-style:none;
+    text-decoration: none;
+    margin-right: 15px;
+    transition: all 0.15s ease-in-out;
+    transition-property: color, background-color;
 }
