--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -56,3 +56,10 @@
     background: #FFFFFF;
     opacity: 0.25;
 }
+.copyright{
+    color: white;
+}
+.imgLogo{
+    margin-top: 19px;
+    height: max-content;
+}
